--- a/.sandstorm/service-config/nginx.conf
+++ b/.sandstorm/service-config/nginx.conf
@@ -78,5 +78,8 @@ http {
 			# PHP only, required if PHP was built with --enable-force-cgi-redirect
 			fastcgi_param  REDIRECT_STATUS    200;
 		}
+		location /_sandstorm/websocket {
+			proxy_pass http://127.0.0.1:3000;
+		}
 	}
 }
