--- a/.sandstorm/service-config/nginx.conf
+++ b/.sandstorm/service-config/nginx.conf
@@ -80,6 +80,10 @@ http {
 		}
 		location /_sandstorm/websocket {
 			proxy_pass http://127.0.0.1:3000;
+			proxy_http_version 1.1;
+			proxy_set_header Upgrade $http_upgrade;
+			proxy_set_header Connection "Upgrade";
+			proxy_set_header Host $host;
 		}
 	}
 }
